html code for landing page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.jpeg">
     <title>Web Design Mastery | Explore Destinations</title>
   </head>
   <body>
